# shortener

./: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/app/: main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: bc022fd1f86f_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: shorten.py
backend/app/core/: config.py  database.py
backend/scripts/: cli.py
frontend/app/: Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json
frontend/app/src/: App.vue
